# dcnr-minisandbox

./: .gitignore  CHANGELOG.md  README.md  build_and_publish.cmd  build_only.cmd  pyproject.toml
src/: quick_test.py  test_attributes.py  test_lpc_package.py
src/dcnr/lpc/: __init__.py  registry.py
src/dcnr/mangodb/: README.md  __init__.py  engine.py
src/dcnr/minisandbox/: __init__.py  registry.py  sbox.py
